force-app/main/default/objects/Charter__c/Charter__c.object-meta.xml
<CustomObject>
    <label>Charter</label>
    <nameField>
        <label>Charter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charter List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>