force-app/main/default/objects/Charter__c/fields/Charter_representative__c.field-meta.xml
<CustomField>
    <fullName>Charter_representative__c</fullName>
    <label>Charter representative</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>