force-app/main/default/objects/Charter__c/fields/e_mail__c.field-meta.xml
<CustomField>
    <fullName>e_mail__c</fullName>
    <label>e-mail</label>
    <required>true</required>
    <type>Email</type>
</CustomField>