force-app/main/default/objects/Charter__c/fields/Trust_Level__c.field-meta.xml
<CustomField>
    <fullName>Trust_Level__c</fullName>
    <label>Trust Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good responce</fullName>
            </value>
            <value>
                <fullName>Medium responce</fullName>
            </value>
            <value>
                <fullName>Bad responce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>